--- a/src/colours.scss
+++ b/src/colours.scss
@@ -4,7 +4,7 @@ $lightgrey: #F0F0F0;
 $gray: #808080;
 
 $body-bg: #FFFFFF;
-$primary: #E94866;
+$primary: #FF1A5C;
 $darkprimary: #130d20;
 $secondary: #b5e7a0;
 $tertiary: #e3eaa7;
